# welding_robot

./: .gitignore  CMakeLists.txt  LICENSE  README.md  graph.in  kroA100.tsp  main.cpp  test.stl  weld_points.in
common/: CMakeLists.txt  matplotlibcpp.h
coppeliaSim-client/: CMakeLists.txt  CoppeliaSim.h
core/: ACS.hpp  ACSRank_3D.hpp  ACS_3D.hpp  ACS_GTSP.hpp  ASRank_3D.hpp  BSplineBasic.h  BezierCurve.h  CMakeLists.txt  Linear.h  model_grid_map.hpp  readSTL.hpp  read_STL.hpp  robot.cpp  temp.hpp
files/: origin_piece.stl  simplified_piece.stl  welding_joint_sim.ttt  welding_sim.ttt
scripts/: show_model.py  show_path_3d.py
sim/: simplified_piece.stl  welding_joint_sim.ttt  welding_sim.ttt
